[gd_scene load_steps=2 format=3 uid="uid://ch4adqotf1ihk"]

[ext_resource type="Script" path="res://classes/todo_list_item.gd" id="1_qcony"]

[node name="todo_list_item" type="VBoxContainer"]
theme_override_constants/separation = 8
script = ExtResource("1_qcony")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="expand_button" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Expand"

[node name="todo_description" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "test...test...test...test...test...test..."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="CheckBox" type="CheckBox" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="delete_button" type="Button" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Delete
"

[node name="expanded_details" type="MarginContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(475, 200)
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="expanded_details"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="expanded_details/VBoxContainer"]
layout_mode = 2
text = "Task Name"

[node name="task_name_input" type="TextEdit" parent="expanded_details/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(468, 32)
layout_mode = 2

[node name="Label2" type="Label" parent="expanded_details/VBoxContainer"]
layout_mode = 2
text = "Task Description"

[node name="task_description_input" type="TextEdit" parent="expanded_details/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(468, 128)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="expanded_details/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label3" type="Label" parent="expanded_details/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Task State:"

[node name="state_check" type="CheckBox" parent="expanded_details/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="expanded_details/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label4" type="Label" parent="expanded_details/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Reoccurring?"

[node name="reoccurring_check" type="CheckBox" parent="expanded_details/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/HBoxContainer/expand_button" to="." method="_on_expand_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/delete_button" to="." method="_on_delete_button_pressed"]
